@@ -730,6 +730,8 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12170. hadoop-common's JNIFlags.cmake is redundant and can be
     removed (Alan Burlison via Colin P. McCabe)
 
+    HADOOP-11807. add a lint mode to releasedocmaker (ramtin via aw)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
